[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portsurge"
version = "1.0.0"
description = "Async subdomain port scanner for bug bounty recon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "arookiech"},
]
keywords = ["port-scanner", "bug-bounty", "recon", "security", "pentest", "subdomain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
portsurge = "portsurge.cli:main"

[project.urls]
Homepage = "https://github.com/arookiech/portsurge"
Issues = "https://github.com/arookiech/portsurge/issues"

[tool.setuptools.packages.find]
include = ["portsurge*"]
